// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders correctly 1`] = `
<div
  id="jh-sidebar"
  style={
    Object {
      "WebkitFlex": "0 0 18em",
      "backgroundColor": "#eee",
      "borderRight": "2px solid #ddd",
      "flex": "0 0 18em",
      "fontFamily": "sans-serif",
      "fontSize": "0.8em",
      "overflow": "auto",
      "padding": "0.3em 0",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": "1.1em",
        "marginTop": "0.4em",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitFlex": "0 0 30px",
          "flex": "0 0 30px",
        }
      }
    >
      <a
        className=""
        href="link/to/parent/folder"
        onClick={[Function]}
        style={
          Object {
            "color": "currentColor",
            "margin": "0.3em",
            "padding": "0.3em",
          }
        }
      >
        <i
          className="giu-icon fa fa-chevron-left fa-lg"
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "fontSize": undefined,
              "letterSpacing": "normal",
            }
          }
        />
      </a>
    </div>
    <div
      style={
        Object {
          "WebkitFlex": 1,
          "flex": 1,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      title="Subtitle"
    >
      Title
    </div>
    <div
      style={
        Object {
          "WebkitFlex": "0 1 30px",
          "flex": "0 1 30px",
        }
      }
    >
      <i
        className="giu-icon fa fa-file-code-o fa-lg"
        id="jh-toggle-raw"
        onClick={undefined}
        style={
          Object {
            "color": "gray",
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Toggle raw/HTML snapshot"
      />
    </div>
  </div>
  one
  two
</div>
------------HTML PREVIEW---------------
<div
  id="jh-sidebar"
  style="-webkit-flex:0 0 18em;background-color:#eee;border-right:2px solid #ddd;flex:0 0 18em;font-family:sans-serif;font-size:0.8em;overflow:auto;padding:0.3em 0;"
>
  <div style="align-items:baseline;display:flex;flex-direction:row;margin-bottom:1.1em;margin-top:0.4em;">
    <div style="-webkit-flex:0 0 30px;flex:0 0 30px;">
      <a
        class=""
        href="link/to/parent/folder"
        style="color:currentColor;margin:0.3em;padding:0.3em;"
      >
        <i
          class="giu-icon fa fa-chevron-left fa-lg"
          style="cursor:pointer;letter-spacing:normal;"
        >
        </i>
      </a>
    </div>
    <div
      style="-webkit-flex:1;flex:1;font-weight:bold;text-align:center;"
      title="Subtitle"
    >
      Title
    </div>
    <div style="-webkit-flex:0 1 30px;flex:0 1 30px;">
      <i
        class="giu-icon fa fa-file-code-o fa-lg"
        id="jh-toggle-raw"
        style="color:gray;cursor:pointer;letter-spacing:normal;"
        title="Toggle raw/HTML snapshot"
      >
      </i>
    </div>
  </div>
  one
  two
</div>
`;

exports[`Sidebar renders correctly without linkBack 1`] = `
<div
  id="jh-sidebar"
  style={
    Object {
      "WebkitFlex": "0 0 18em",
      "backgroundColor": "#eee",
      "borderRight": "2px solid #ddd",
      "flex": "0 0 18em",
      "fontFamily": "sans-serif",
      "fontSize": "0.8em",
      "overflow": "auto",
      "padding": "0.3em 0",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": "1.1em",
        "marginTop": "0.4em",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitFlex": "0 0 30px",
          "flex": "0 0 30px",
        }
      }
    >
      <a
        className=""
        href="#"
        onClick={[Function]}
        style={
          Object {
            "color": "currentColor",
            "margin": "0.3em",
            "padding": "0.3em",
          }
        }
      >
        <i
          className="giu-icon fa fa-chevron-left fa-lg"
          onClick={undefined}
          style={
            Object {
              "color": "#999999",
              "cursor": undefined,
              "fontSize": undefined,
              "letterSpacing": "normal",
            }
          }
        />
      </a>
    </div>
    <div
      style={
        Object {
          "WebkitFlex": 1,
          "flex": 1,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      title="Subtitle"
    >
      Title
    </div>
    <div
      style={
        Object {
          "WebkitFlex": "0 1 30px",
          "flex": "0 1 30px",
        }
      }
    >
      <i
        className="giu-icon fa fa-file-code-o fa-lg"
        id="jh-toggle-raw"
        onClick={undefined}
        style={
          Object {
            "color": "gray",
            "cursor": "pointer",
            "fontSize": undefined,
            "letterSpacing": "normal",
          }
        }
        title="Toggle raw/HTML snapshot"
      />
    </div>
  </div>
  one
  two
</div>
------------HTML PREVIEW---------------
<div
  id="jh-sidebar"
  style="-webkit-flex:0 0 18em;background-color:#eee;border-right:2px solid #ddd;flex:0 0 18em;font-family:sans-serif;font-size:0.8em;overflow:auto;padding:0.3em 0;"
>
  <div style="align-items:baseline;display:flex;flex-direction:row;margin-bottom:1.1em;margin-top:0.4em;">
    <div style="-webkit-flex:0 0 30px;flex:0 0 30px;">
      <a
        class=""
        href="#"
        style="color:currentColor;margin:0.3em;padding:0.3em;"
      >
        <i
          class="giu-icon fa fa-chevron-left fa-lg"
          style="color:#999999;letter-spacing:normal;"
        >
        </i>
      </a>
    </div>
    <div
      style="-webkit-flex:1;flex:1;font-weight:bold;text-align:center;"
      title="Subtitle"
    >
      Title
    </div>
    <div style="-webkit-flex:0 1 30px;flex:0 1 30px;">
      <i
        class="giu-icon fa fa-file-code-o fa-lg"
        id="jh-toggle-raw"
        style="color:gray;cursor:pointer;letter-spacing:normal;"
        title="Toggle raw/HTML snapshot"
      >
      </i>
    </div>
  </div>
  one
  two
</div>
`;
